# django-models

./: README.md  db.sqlite3  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog_project/: settings.py  urls.py
templates/: base.html  details.html  home.html
